Further work on todo app

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,9 +1,10 @@
-<div class="container">
+<div class="my-app-container">
     <div class="element">
         <my-app-header>Header should go here.</my-app-header>
     </div>
     <div class="element">
-        <my-app-content>Content should go here.</my-app-content>
+        <!-- <my-app-content>Content should go here.</my-app-content> -->
+        <router-outlet></router-outlet>
     </div>
     <div class="element">
         <my-app-footer>Footer should go here.</my-app-footer>
