--- a/app/footer/footer.component.html
+++ b/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <span>Copyright &copy; 2016</span>
+    <!-- <span>Copyright &copy; 2016</span> -->
     <span>Author:&nbsp;{{author.name}}</span>
-    <span>Contact:&nbsp;</span><a [href]="author.url" [title]="author.url">Click Here</a>
+    <span>Contact:&nbsp;<a [href]="author.url" [title]="author.url">Click Here</a></span>
 </footer>
